# rustserini

./: .gitignore  Cargo.toml  README.md
examples/: collection_iterator.py  embedding_generator.rs  faiss_embedding_writer.rs  json_embedding_writer.rs  load_mdpr_model_local.rs  load_model.rs  pyserini_auto_encoder.py  rust_bert_embedding_gen.rs  struct_loop.rs  torch_jit.py
examples/misc/: jni_j4rs_explore.rs  pyserini_encode.sh
file_setup/: environment.yml
indexes/: .gitkeep
src/: cmd.rs  main.rs  query_iterator.rs
src/encode/: auto.rs  base.rs  mod.rs  vector_writer.rs
src/resources/: .gitkeep
src/searcher/: mod.rs
src/searcher/faiss/: mod.rs  model.rs  searcher.rs
src/searcher/lucene/: index.rs  mod.rs  searcher.rs
tests/: encoder_test.rs  searcher_test.rs
