[package]
name = "rustserini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.8.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.0" }
hf-hub = "0.3.2"
j4rs = "0.21.0"
indicatif = "0.17.9"
records = "0.2.0"
bzip2 = "0.4.4"
anyhow = "1.0.93"
structopt = "0.3.26"
tokenizers = "0.20.3"
kdam = "0.6.0"
flate2 = "1.0.35"
serde_derive = "1.0.215"
serde = "1.0.215"
serde_json = "1.0.132"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
faiss = "0.12.1"
clap = { version = "4.5.21", features = ["derive"] }

[[example]]
name = "json_embedding_writer"
